--- a/mysite.conf
+++ b/mysite.conf
@@ -1,4 +1,7 @@
-
+[menuend]
+<a href="http://www.clustrmaps.com/map/Wang-xijun.github.io" title="Visit tracker for Wang-xijun.github.io"><img src="//www.clustrmaps.com/map_v2.png?d=JX6njOV8GeY8dOiW4VHdpUDymIsNblmhDewuLwtegs4" /></a>
+</td>
+<td id="layout-content">
 
 [bodyend]
 <a href="http://www.clustrmaps.com/map/Wang-xijun.github.io" title="Visit tracker for Wang-xijun.github.io"><img src="//www.clustrmaps.com/map_v2.png?d=JX6njOV8GeY8dOiW4VHdpUDymIsNblmhDewuLwtegs4" /></a>
